<resources>
    <string name="app_name">CST2335 Final Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="distance">Distance (KM/MI)</string>
    <string name="distance_km">km</string>
    <string name="distance_ml">ml</string>
    <string name="distance_in_km">Distance in km or mi</string>
    <string name="vehicle">Vehicle Company</string>
    <string name="vehicle_hint">Select Vehicle Company</string>
    <string name="search_car_model">Search Models</string>
    <string name="saved_car_model">Open Saved Models</string>

    <string name="carbon_dioxide_version">v1.0</string>
    <string name="carbon_dioxide_author_name">Clifford Leonard Dsa</string>
    <string name="carbon_dioxide_activity_main">Carbon Dioxide Interface</string>
    <string name="carbon_dioxide_activity_detail">Details</string>

    <string name="carbon_estimates">grams(g) : %1f \n pounds (lb) : %2f \n kilograms (kg) : %3f \n metric tons (mt) : %4f</string>

    <string name="enter_distance">Please enter travel distance</string>
    <string name="select_company">Please enter vehicle company</string>

    <string name="msg_confirm_delete_estimate">Are you sure you want to delete this estimate?</string>
    <string name="vehicle_make_found">Total %1d vehicle makes found</string>
    <string name="carbon_interface">Carbon Dioxide Interface</string>
    <string name="carbon_interface_menu">This interface will calculates how much CO2 (carbon dioxide) is generated from driving a car</string>
    <string name="downloading">Downloading</string>
    <string name="model_download_message">Vehicle models for %1s</string>
    <string name="loading">Loading</string>
    <string name="deleting_estimate">Deleteing Estimate</string>
    <string name="saving_estimate">Saving Estimate</string>
    <string name="estimate_delete_confirmation">Estimate deleted successfully</string>
    <string name="estimate_delete_error">Error deleting estimate</string>


    <string name="pexels_search_item">Type here to search pictures</string>
    <string name="search_pexels_pictures">Search Pictures</string>

    <string name="help">Help</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_close">Close</string>
    <string name="welcome_message">Welcome to the World of Images!</string>
    <string name="btn_search">Search</string>
    <string name="msg_title_help">Help</string>
    <string name="msg_no_internet">No Internet Connection</string>
    <string name="pexel_project">Pexels Project</string>
    <string name="msg_main_help">Tap the hamburger icon to open a list of available projects and select a project to open it.</string>
    <string name="msg_pexel_help">Type any term in the search field and press the search button then click on the image to see the details page</string>
    <string name="err_processing">Error while processing request</string>
    <string name="msg_confirm_delete">Are you sure you want to delete this photo?</string>
    <string name="msg_title_confirm_delete">Confirm</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="msg_enter_to_search">Please enter something to search</string>
    <string name="msg_wait">Processing, please wait...</string>
    <string name="ok">OK</string>

    <string name="project_pexels">Pexels</string>
    <string name="project_owlbot_dictionary">Owlbot Dictionary</string>
    <string name="project_covid_19_information_tracker">Covid 19 Information tracker</string>
    <string name="project_carbondixide">Carbon Dioxide interface</string>

    <string name="version">v1.0</string>
    <string name="author_name">Seema Thapa Gurung</string>
    <string name="activity_name">Pexels Activity</string>
    <string name="author_group">Seema, Cliff, Renu, Faisal</string>
    <string name="activity_group">Final project</string>
    <string name="desc">CST2335 Final Project\n\nPexels\n\nOwlbot Dictionary\n\nCovid 19 Information tracker\n\nCarbon Dioxide interface\n\nPlease tap on the Hamburger icon on top left to select a project</string>
    <string name="task_completed">Task Completed Successfully</string>
    <string name="open_saved_photos">Open Saved Photos</string>
    <string name="estimate_saved">Estimate Saved Successfully</string>


    <string name="owl_bot_activity_main">Serach Word</string>
    <string name="owl_bot_author_name">Reema</string>
    <string name="owl_bot_version">v1.0</string>
    <string name="owl_enter_word">Type any word to search</string>
    <string name="owl_search_word">Type any word</string>
    <string name="owl_search_botton">Search Value</string>
    <string name="owl_open_definitions">Open Definitions</string>
    <string name="owl_word">"Word: %1s"</string>
    <string name="owl_type">"Type: %1s"</string>
    <string name="owl_definitions">"Definition: %1s"</string>
    <string name="owl_example">"Example: %1s"</string>
    <string name="pronunciation">"Pronunciation: %1s"</string>
    <string name="owl_word_delete_success">Word deleted successfully</string>
    <string name="owl_word_deleting">Deleting word</string>
    <string name="owl_word_saving">Saving Word</string>
    <string name="owl_word_saved">Word saved successfully</string>
    <string name="owl_word_delete_confirmation">Are you sure you want to delete this word</string>
    <string name="owl_word_delete_error">Error deleting word</string>
    <string name="owl_interface">Owl Bot Word Dictionary</string>
    <string name="owl_interface_menu">This inteface will list all definitions for gievn word, user can select any definitions from list to see full definitions with example in next screen</string>
    <string name="owl_definitions_found">Total %1d definitions found</string>
    <string name="owl_download_definition">Loading definitions for %1s</string>
    <string name="owl_loading_definitions">Loading from database</string>


    <string name="button_text4">Covid 19 Tracker</string>
    <string name="increase">Increase Size</string>
    <string name="decrease">Dcrease Size</string>
    <string name="Help">Help_Menu</string>
    <string name="open">Covid_Open</string>
    <string name="close">Covid_Close</string>
    <string name="date">Date</string>

    <string name="covid_result1">Total_cases</string>
    <string name="covid_result2">Total_cases</string>
    <string name="covid_result3">Total_cases</string>
    <string name="covid_result4">Total_cases</string>
    <string name="covid_result5">Total_cases</string>
    <string name="total_cases"> Total Cases</string>
    <string name="total_fatalities">Total Fatalities</string>
    <string name="total_vaccinations">Total Vaccinations</string>
    <string name="total_hospitalizations">Total Hospitalizations</string>
    <string name="total_recoveries">Total Recoveries</string>
    <string name="covid_save">Save</string>
    <string name="covid_close">Close</string>
    <string name="covid_delete">Delete</string>

</resources>