<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navpexelsProject"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/project_pexels"
        app:showAsAction="always" />
    <item
        android:id="@+id/carbonInterface"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/project_carbondixide"
        app:showAsAction="always" />
    <item
        android:id="@+id/dictionaryProject"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/project_owlbot_dictionary"
        app:showAsAction="always" />
    <item
        android:id="@+id/navCovidProject"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/project_covid_19_information_tracker"
        app:showAsAction="always" />
</menu>