<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/lblWelcomeMessage"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textColor="@color/pexel_primary"
        android:gravity="center"/>
    <EditText
        android:id="@+id/edtxtSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:hint="@string/pexels_search_item"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/btn_search"
        />

    <Button
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:id="@+id/btnSavedPhotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/open_saved_photos"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>